k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prism
  labels:
    name: prism
    app.kubernetes.io/part-of: prism
